Fix: use pre-encoded p12, import directly

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,14 +25,8 @@ jobs:
         CERT_DIR=$RUNNER_TEMP/certs
         mkdir -p "$CERT_DIR"
 
-        # Decode p12
-        echo "$P12_BASE64" | base64 --decode > "$CERT_DIR/cert_original.p12"
-
-        # Re-encode p12 using Homebrew OpenSSL (supports legacy format)
-        OPENSSL=$(brew --prefix openssl@3)/bin/openssl
-        $OPENSSL pkcs12 -in "$CERT_DIR/cert_original.p12" -clcerts -nokeys -out "$CERT_DIR/cert.pem" -legacy -passin pass:"$P12_PASSWORD"
-        $OPENSSL pkcs12 -in "$CERT_DIR/cert_original.p12" -nocerts -nodes -out "$CERT_DIR/key.pem" -legacy -passin pass:"$P12_PASSWORD"
-        $OPENSSL pkcs12 -export -in "$CERT_DIR/cert.pem" -inkey "$CERT_DIR/key.pem" -out "$CERT_DIR/cert.p12" -passout pass:temp123
+        # Decode p12 (pre-encoded in modern format on local machine)
+        echo "$P12_BASE64" | base64 --decode > "$CERT_DIR/cert.p12"
 
         # Create keychain
         KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
@@ -41,7 +35,7 @@ jobs:
         security unlock-keychain -p "" "$KEYCHAIN_PATH"
 
         # Import certificate
-        security import "$CERT_DIR/cert.p12" -P temp123 -A -t cert -f pkcs12 -k "$KEYCHAIN_PATH"
+        security import "$CERT_DIR/cert.p12" -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k "$KEYCHAIN_PATH"
         security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k "" "$KEYCHAIN_PATH"
         security list-keychain -d user -s "$KEYCHAIN_PATH"
 
