--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,15 +18,16 @@ jobs:
 
     - name: Install Certificate and Profile
       env:
-        P12_BASE64: ${{ secrets.P12_BASE64 }}
-        P12_PASSWORD: ${{ secrets.P12_PASSWORD }}
+        CERT_PEM_BASE64: ${{ secrets.CERT_PEM_BASE64 }}
+        KEY_PEM_BASE64: ${{ secrets.KEY_PEM_BASE64 }}
         PROFILE_BASE64: ${{ secrets.PROFILE_BASE64 }}
       run: |
         CERT_DIR=$RUNNER_TEMP/certs
         mkdir -p "$CERT_DIR"
 
-        # Decode p12 (pre-encoded in modern format on local machine)
-        echo "$P12_BASE64" | base64 --decode > "$CERT_DIR/cert.p12"
+        # Decode PEM cert and key
+        echo "$CERT_PEM_BASE64" | base64 --decode > "$CERT_DIR/cert.pem"
+        echo "$KEY_PEM_BASE64" | base64 --decode > "$CERT_DIR/key.pem"
 
         # Create keychain
         KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
@@ -34,8 +35,9 @@ jobs:
         security set-keychain-settings -lut 21600 "$KEYCHAIN_PATH"
         security unlock-keychain -p "" "$KEYCHAIN_PATH"
 
-        # Import certificate
-        security import "$CERT_DIR/cert.p12" -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k "$KEYCHAIN_PATH"
+        # Import certificate and key into keychain
+        security import "$CERT_DIR/cert.pem" -k "$KEYCHAIN_PATH" -A
+        security import "$CERT_DIR/key.pem" -k "$KEYCHAIN_PATH" -A
         security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k "" "$KEYCHAIN_PATH"
         security list-keychain -d user -s "$KEYCHAIN_PATH"
 
