UI: switch all text to Chinese (中文界面)

--- a/QuickUnzip/Info.plist
+++ b/QuickUnzip/Info.plist
@@ -5,7 +5,7 @@
     <key>CFBundleDevelopmentRegion</key>
     <string>en</string>
     <key>CFBundleDisplayName</key>
-    <string>QuickUnzip</string>
+    <string>快速解压</string>
     <key>CFBundleExecutable</key>
     <string>$(EXECUTABLE_NAME)</string>
     <key>CFBundleIdentifier</key>
